<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConversorFragment"
    android:orientation="vertical"
    android:layout_margin="24dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_the_currency_to_convert"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <Spinner
            android:id="@+id/currencySpinner"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:entries="@array/supported_currencies"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_ammount"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/currencyValue"
            android:layout_width="120dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:gravity="center_horizontal"
            android:maxLength="10"/>

    </LinearLayout>

    <Button
        android:layout_marginTop="32dp"
        android:id="@+id/login_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:textColor="@color/white"
        android:background="@drawable/enable_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_container" />

</LinearLayout>